--- a/manifest.json
+++ b/manifest.json
@@ -68,5 +68,12 @@
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "2"
+    "vueVersion" : "2",
+    "h5" : {
+        "title" : "xiao圈子",
+        "router" : {
+            "base" : "./",
+            "mode" : "hash"
+        }
+    }
 }
